fixed layout issues

--- a/Yiota/investmentplatform/public/stylesheets/style.css
+++ b/Yiota/investmentplatform/public/stylesheets/style.css
@@ -1,6 +1,11 @@
+html{
+    height: 100%;
+}
+
 body {
   padding: 50px;
-  font: 15px "Lucida Grande", Helvetica, Arial, sans-serif;
+  height: 100%;
+  font: 15px "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-image: url("frost.jpg");
 }
 
@@ -41,7 +46,7 @@ p {
 .select-commodity {
   padding: 10px;
   font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: rgb(73, 73, 73);  
+  color: rgb(73, 73, 73);
 }
 
 .select-commodity-choices {
@@ -61,4 +66,19 @@ p {
   padding-bottom: 15px;
 }
 
-
+/*  For chart layout */
+/* Control the left side */
+.left {
+    display: inline-block;
+    width: 50%;
+    height: 100%;
+    background-color: #001a33;
+}
+/* Control the right side */
+.right {
+    display: inline-block;
+    width: 50%;
+    height: 100%;
+    background-color: #efefef;
+}
+/* If you want the content centred horizontally and vertically */
